--- a/ref.html
+++ b/ref.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Reference - Atarium</title>
         <meta charset="utf-8"/>
-        <title> </title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Name</div>
+        <div class="header">Atarium</div>
         <div class=navbar>
-             <a href="#">Home</a>
-             <a href="#">About</a>
-             <a href="#">Gallery</a>
+             <a href="index.html">Home</a>
+             <a href="wiki.html">Wiki</a>
+             <a href="shop.html">Shop</a>
+             <a href="ref.html">Reference</a>
         </div>
-        <div class="gallery">
-            <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+        <div class="aboutMain">
+            <div class="leftPane">
             </div>
-            <div class="thumbnail">
-                <img class="thumbnail-image" src="">
-            </div>
-            <div class="thumbnail">
-                <img class="thumbnail-image" src="">
-            </div>
-            <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+             <div class="rightPane">
             </div>
         </div>
         <div class="footer">
