--- a/wiki.html
+++ b/wiki.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>Wiki - Atarium</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Name</div>
+        <div class="header">Atarium</div>
         <div class=navbar>
-             <a href="#">Home</a>
-             <a href="#">About</a>
-             <a href="#">Gallery</a>
+             <a href="index.html">Home</a>
+             <a href="wiki.html">Wiki</a>
+             <a href="shop.html">Shop</a>
+             <a href="ref.html">Reference</a>
         </div>
         <div class="aboutMain">
             <div class="leftPane">
